testsuite/tests/typecheck/should_run/T11647Sub.hs
module T11647Sub (main) where

main :: IO ()
main = return ()
