testsuite/tests/typecheck/should_fail/T27390a.hs
module T27390a where


someFunc = return ()
